--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "stimulus": "^3.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
+    "tw-elements": "^1.0.0-alpha13",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
