--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "autoprefixer": "9",
+    "flowbite": "^1.5.5",
     "postcss": "7",
     "stimulus": "^3.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
