navbar 調整, 營業時間調整

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,12 @@ MERCHANT_ID=
 NGROK_URL= 
 RETURN_URL= 
 NOTIFY_URL= 
+
+
+#AWS S3
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
+
+#google API
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
