--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "flowbite": "^1.5.5",
     "postcss": "7",
     "stimulus": "^3.2.1",
+    "stimulus-content-loader": "^4.1.0",
+    "stimulus-dropdown": "^2.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "turbolinks": "^5.2.0",
     "tw-elements": "^1.0.0-alpha13",
